recipe content: Baked Beans

--- a/recipes/baked-beans.html
+++ b/recipes/baked-beans.html
@@ -9,6 +9,34 @@
 
 <body>
     <h1>Baked Beans</h1>
+    <img src="https://www.allrecipes.com/thmb/mdJT-pErhGAGM31pYa-BrQo5eo0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21519simple-baked-beans-iiYoly4x3-f1ef499249c04f13bf068c6f6ddd1d0f.jpg"
+        alt="baked beans recipe">
+    <h2>Description</h2>
+    <p>
+        This easy baked beans recipe with bacon is my favorite. Mustard, brown sugar, and ketchup add a delicious flavor
+        to the
+        beans.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>½ pound bacon, chopped</li>
+        <li>1 onion, finely chopped</li>
+        <li>2 (15 ounce) cans baked beans</li>
+        <li>¼ cup brown sugar</li>
+        <li>¼ cup ketchup</li>
+        <li>¼ cup prepared mustard, or to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            Place bacon in a large, deep skillet. Cook over medium high heat until evenly brown. Add the onion and sauté
+            until
+            tender. Drain excess oil, if desired.
+        </li>
+        <li>
+            Stir in beans, brown sugar, ketchup, and mustard. Cook, stirring occasionally, until bubbly.
+        </li>
+    </ol>
 </body>
 
 </html>
