--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/baked-beans.html">Baked Beans</a>
+    <ul>
+        <li><a href="./recipes/baked-beans.html">Baked Beans</a></li>
+        <li><a href="./recipes/braised-beef.html">Braised Beef</a></li>
+    </ul>
 </body>
 
 </html>
