--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="./recipes/baked-beans.html">Baked Beans</a></li>
         <li><a href="./recipes/braised-beef.html">Braised Beef</a></li>
+        <li><a href="./recipes/sweet-potatoe-pie.html">Sweet Potatoe Pie</a></li>
     </ul>
 </body>
 
